--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ buildscript {
         signalrVersion = '3.1.15'
         gsm_version = '4.3.10'
         compose_ui_version = '1.1.1'
+        compose_version = '1.1.0-beta01'
     }
 
     repositories {
