--- a/app/build.gradle
+++ b/app/build.gradle
@@ -221,8 +221,8 @@ dependencies {
     implementation 'com.github.dewinjm:monthyear-picker:1.0.2'
 
 //    implementation 'androidx.activity:activity-ktx:1.3.0-alpha07'
-    //  implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
-//    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
+    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
+    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
 
     //SignalR Java client
 //    implementation "com.microsoft.signalr:signalr:${signalrVersion}"
