--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,7 +88,7 @@ sonarqube {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.71"
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -102,7 +102,7 @@ dependencies {
 
     implementation "androidx.multidex:multidex:$multidex_version"
 
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.71"
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
 
     // App dependencies
