--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,7 +88,7 @@ sonarqube {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.71"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -98,11 +98,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation "androidx.core:core-ktx:$kotlinVersion"
+    implementation 'androidx.core:core-ktx:1.8.0'
 
     implementation "androidx.multidex:multidex:$multidex_version"
 
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.71"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
 
     // App dependencies
