--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
         gsm_version = '4.3.10'
         compose_ui_version = '1.1.1'
         compose_version = '1.1.0-beta01'
+        coroutine_version = '1.3.9'
     }
 
     repositories {
