--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ buildscript {
         compose_ui_version = '1.1.1'
         compose_version = '1.1.0-beta01'
         coroutine_version = '1.3.9'
+        security_crypto = '1.0.0'
     }
 
     repositories {
