--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
         applicationId "com.android.template"
         minSdkVersion 23
         targetSdkVersion 33
-        versionCode 5
-        versionName "1.5"
+        versionCode 6
+        versionName "1.6"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -32,6 +32,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "API_SERVER_BASE_URL", "\"https://newsapi.org/v2/\"")
+        }
+        debug {
+            minifyEnabled false
+            buildConfigField("String", "API_SERVER_BASE_URL", "\"https://newsapi.org/v2/\"")
         }
     }
 
@@ -88,29 +93,34 @@ sonarqube {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "com.google.android.material:material:$material_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation "androidx.core:core-ktx:$core_ktx_version"
 
     implementation "androidx.multidex:multidex:$multidex_version"
 
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "androidx.recyclerview:recyclerview:$recycler_view_version"
 
     // App dependencies
-    implementation "com.google.code.gson:gson:$gsonVersion"
+    implementation "com.google.code.gson:gson:$gson_version"
 
     //Fast Android Networking
-    implementation "com.amitshekhar.android:android-networking:$fastAndroidNetworkingVersion"
-    implementation "com.amitshekhar.android:rx2-android-networking:$fastAndroidNetworkingVersion"
+    implementation "com.amitshekhar.android:android-networking:$fast_android_networking_version"
+    implementation "com.amitshekhar.android:rx2-android-networking:$fast_android_networking_version"
+
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpLogging_version"
 
     /**
      * di Dagger 2
@@ -151,14 +161,14 @@ dependencies {
     /**
      * Reactive Programing library
      */
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.18'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlin_version"
 
     /**
      * KeyStore
      */
-    implementation 'in.co.ophio:secure-preferences:0.1.3'
+    implementation "in.co.ophio:secure-preferences:$secure_preferences_version"
 
     /**
      * Pagination Library
@@ -169,22 +179,22 @@ dependencies {
     /**
      * Picasso fot image
      */
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "com.squareup.picasso:picasso:$picasso_version"
 
     /**
      * * SwipeRefreshLayout
      */
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swiperefresh_layout_version"
 
 //    image picker
-    implementation 'com.github.nguyenhoanglam:ImagePicker:1.3.3'
+    implementation "com.github.nguyenhoanglam:ImagePicker:$image_picker_version"
     //file picker
-    implementation 'com.nononsenseapps:filepicker:4.1.0'
+    implementation "com.nononsenseapps:filepicker:$filepicker_version"
 
     //navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation 'androidx.fragment:fragment-ktx:1.3.3'
+    implementation "androidx.fragment:fragment-ktx:$fragment_ktx_version"
 
     // Dynamic Feature Module Support
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
@@ -193,23 +203,23 @@ dependencies {
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
     // glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    implementation "androidx.legacy:legacy-support-v4:$androidx_support_version"
     //expandableLayout
-    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
+    implementation "net.cachapa.expandablelayout:expandablelayout:$expandable_layout_version"
 
     //sms retriever
     //  implementation 'com.google.android.gms:play-services-auth:19.0.0'
     //  implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.0'
     //crop
-    implementation 'com.isseiaoki:simplecropview:1.1.8'
+    implementation "com.isseiaoki:simplecropview:$simplecrop_view_version"
 
     //secure code
-    implementation 'com.chaos.view:pinview:1.4.4'
+    implementation "com.chaos.view:pinview:$pin_view_version"
 
     // firebase
-    implementation platform('com.google.firebase:firebase-bom:28.3.1')
+    implementation platform("com.google.firebase:firebase-bom:$firebase_bom_version")
 
     // Declare the dependencies for the Crashlytics and Analytics libraries
     // When using the BoM, you don't specify versions in Firebase library dependencies
@@ -220,28 +230,30 @@ dependencies {
     implementation 'com.google.firebase:firebase-database'
 
     //data picker
-    implementation 'com.github.dewinjm:monthyear-picker:1.0.2'
+    implementation "com.github.dewinjm:monthyear-picker:$month_year_picker"
 
 //    implementation 'androidx.activity:activity-ktx:1.3.0-alpha07'
-    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
-    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
+    implementation "com.microsoft.appcenter:appcenter-analytics:${app_center_sdk_version}"
+    implementation "com.microsoft.appcenter:appcenter-crashes:${app_center_sdk_version}"
 
     //SignalR Java client
-//    implementation "com.microsoft.signalr:signalr:${signalrVersion}"
+//    implementation "com.microsoft.signalr:signalr:${signalR_version}"
 
     // Compose
     // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation "androidx.activity:activity-compose:$compose_activity_version"
     // Compose Material Design
-    implementation 'androidx.compose.material:material:1.2.1'
+    implementation "androidx.compose.material:material:$compose_tooling_version"
     // Animations
-    implementation 'androidx.compose.animation:animation:1.2.1'
+    implementation "androidx.compose.animation:animation:$compose_tooling_version"
     // Tooling support (Previews, etc.)
-    implementation 'androidx.compose.ui:ui-tooling:1.2.1'
+    implementation "androidx.compose.ui:ui-tooling:$compose_tooling_version"
+    // Tooling support loading Image from url
+    implementation "io.coil-kt:coil-compose:$compose_loading_image_version"
     // Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
-    // UI Tests
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.2.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$compose_lifecycle_viewmodel_version"
+    // UI Tests Compose
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_tooling_version"
 
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
@@ -249,5 +261,5 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
     // Security-crypto
-    implementation "androidx.security:security-crypto:$security_crypto"
+    implementation "androidx.security:security-crypto:$security_crypto_version"
 }
