--- a/build.gradle
+++ b/build.gradle
@@ -2,29 +2,58 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.6.20'
+        appcompat_version = '1.4.2'
+        material_version = '1.6.1'
+        constraint_layout_version = '2.1.4'
+        junit_version = '4.13.2'
+        junit_ext_version = '1.1.3'
+        espresso_version = '3.4.0'
+        core_ktx_version = '1.8.0'
+        recycler_view_version = '1.2.0-alpha05'
+        rxjava_version = '2.2.18'
+        rxandroid_version = '2.1.1'
+        rxkotlin_version = '2.4.0'
+        secure_preferences_version = '0.1.3'
+        picasso_version = '2.71828'
+        swiperefresh_layout_version = '1.0.0'
+        image_picker_version = '1.3.3'
+        filepicker_version = '4.1.0'
+        fragment_ktx_version = '1.3.3'
+        glide_version = '4.11.0'
+        androidx_support_version = '1.0.0'
+        expandable_layout_version = '2.9.2'
+        simplecrop_view_version = '1.1.8'
+        pin_view_version = '1.4.4'
+        firebase_bom_version = '28.3.1'
+        month_year_picker = '1.0.2'
+        gradle_lupgin_kotlin_version = '1.6.20'
         gradleVersion = '7.3.3'
-        kotlinVersion = '1.3.71'
-        roomVersion = '4.3.4'
+        kotlin_version = '1.3.71'
         dagger_version = '2.43.2'
         dagger2_version = '2.30.1'
         dagger3_version = '2.35.1'
         room_version = '2.4.2'
         debug_db_version = '1.0.6'
         lifecycle = '2.1.0-alpha03'
-        gsonVersion = '2.8.6'
+        gson_version = '2.8.6'
         multidex_version = '2.0.1'
         lifecycle_version = '2.2.0'
-        fastAndroidNetworkingVersion = '1.0.2'
+        fast_android_networking_version = '1.0.2'
         pagination_version = '3.0.0'
         nav_version = '2.3.5'
-        appCenterSdkVersion = '4.4.5'
-        signalrVersion = '3.1.15'
+        app_center_sdk_version = '4.4.5'
+        signalR_version = '3.1.15'
         gsm_version = '4.3.10'
         compose_ui_version = '1.1.1'
         compose_version = '1.1.0-beta01'
+        compose_tooling_version = '1.2.1'
+        compose_activity_version = '1.6.0'
+        compose_lifecycle_viewmodel_version = '2.5.1'
+        compose_loading_image_version = '2.2.2'
         coroutine_version = '1.3.9'
-        security_crypto = '1.0.0'
+        security_crypto_version = '1.0.0'
+        retrofit_version = '2.9.0'
+        okhttpLogging_version = '4.9.0'
     }
 
     repositories {
@@ -35,7 +64,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$gradle_lupgin_kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "com.google.gms:google-services:$gsm_version"
         classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3' // added for sonarQube
