--- a/build.gradle
+++ b/build.gradle
@@ -2,50 +2,47 @@
 
 buildscript {
     ext {
-        appcompat_version = '1.4.2'
-        material_version = '1.6.1'
+        kotlin_version = '1.9.24'
+        appcompat_version = '1.7.0'
+        material_version = '1.12.0'
         constraint_layout_version = '2.1.4'
         junit_version = '4.13.2'
-        junit_ext_version = '1.1.3'
-        espresso_version = '3.4.0'
-        core_ktx_version = '1.8.0'
-        recycler_view_version = '1.2.0-alpha05'
-        rxjava_version = '2.2.18'
+        junit_ext_version = '1.2.1'
+        espresso_version = '3.6.1'
+        core_ktx_version = '1.13.1'
+        recycler_view_version = '1.3.2'
+        rxjava_version = '2.2.21'
         rxandroid_version = '2.1.1'
         rxkotlin_version = '2.4.0'
         secure_preferences_version = '0.1.3'
         picasso_version = '2.71828'
-        swiperefresh_layout_version = '1.0.0'
+        swiperefresh_layout_version = '1.1.0'
         image_picker_version = '1.3.3'
         filepicker_version = '4.1.0'
-        fragment_ktx_version = '1.3.3'
-        glide_version = '4.11.0'
+        fragment_ktx_version = '1.8.4'
+        glide_version = '4.14.2'
         androidx_support_version = '1.0.0'
         expandable_layout_version = '2.9.2'
         simplecrop_view_version = '1.1.8'
         pin_view_version = '1.4.4'
         firebase_bom_version = '28.3.1'
         month_year_picker = '1.0.2'
-        gradle_lupgin_kotlin_version = '1.6.20'
+        gradle_lupgin_kotlin_version = '1.6.21'
         gradleVersion = '8.4'
-        kotlin_version = '1.9.0'
         dagger2_version = '2.48.1'
         room_version = '2.6.1'
         debug_db_version = '1.0.6'
         lifecycle = '2.1.0-alpha03'
         gson_version = '2.10.1'
         multidex_version = '2.0.1'
-        lifecycle_version = '2.5.1'
+        lifecycle_version = '2.8.6'
         fast_android_networking_version = '1.0.2'
-        pagination_version = '3.2.1'
-        nav_version = '2.7.6'
+        pagination_version = '3.3.2'
+        nav_version = '2.8.2'
         app_center_sdk_version = '4.4.5'
         signalR_version = '3.1.15'
         gsm_version = '4.4.0'
-        compose_ui_version = '1.1.1'
-        compose_version = '1.1.0-beta01'
-        compose_tooling_version = '1.2.1'
-        compose_activity_version = '1.6.0'
+        compose_bom = '2024.09.03'
         compose_lifecycle_viewmodel_version = '2.5.1'
         compose_loading_image_version = '2.2.2'
         coroutine_version = '1.3.9'
@@ -61,8 +58,8 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$gradle_lupgin_kotlin_version"
+        classpath 'com.android.tools.build:gradle:8.7.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "com.google.gms:google-services:$gsm_version"
         classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3' // added for sonarQube
