--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ buildscript {
         compose_bom = '2024.09.03'
         compose_lifecycle_viewmodel_version = '2.5.1'
         compose_loading_image_version = '2.2.2'
+        compose_junit4= '1.7.4'
         coroutine_version = '1.3.9'
         security_crypto_version = '1.0.0'
         retrofit_version = '2.9.0'
@@ -59,7 +60,7 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.7.0'
+        classpath 'com.android.tools.build:gradle:8.7.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "com.google.gms:google-services:$gsm_version"
