--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext {
+        min_sdk = 23
+        target_sdk = 35
         kotlin_version = '1.9.24'
         appcompat_version = '1.7.0'
         material_version = '1.12.0'
@@ -11,8 +13,8 @@ buildscript {
         espresso_version = '3.6.1'
         core_ktx_version = '1.13.1'
         recycler_view_version = '1.3.2'
-        rxjava_version = '2.2.21'
-        rxandroid_version = '2.1.1'
+        rxjava_version = '3.1.6'
+        rxandroid_version = '3.0.2'
         rxkotlin_version = '2.4.0'
         secure_preferences_version = '0.1.3'
         picasso_version = '2.71828'
@@ -35,10 +37,9 @@ buildscript {
         lifecycle = '2.1.0-alpha03'
         gson_version = '2.10.1'
         multidex_version = '2.0.1'
-        lifecycle_version = '2.8.6'
-        fast_android_networking_version = '1.0.2'
-        pagination_version = '3.3.2'
-        nav_version = '2.8.2'
+        lifecycle_version = '2.8.7'
+        pagination_version = '3.3.4'
+        nav_version = '2.8.4'
         app_center_sdk_version = '4.4.5'
         signalR_version = '3.1.15'
         gsm_version = '4.4.0'
@@ -49,7 +50,7 @@ buildscript {
         coroutine_version = '1.3.9'
         security_crypto_version = '1.0.0'
         retrofit_version = '2.9.0'
-        okhttpLogging_version = '4.9.0'
+        okhttp_version = '4.10.0'
         loading_button_version = '2.3.0'
     }
 
