--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,26 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'org.sonarqube' // added for sonar qube
 
 android {
-
+    signingConfigs {
+        debug {
+            storeFile file('sign/template.jks')
+            storePassword 'templateStorePass'
+            keyAlias 'template_alias'
+            keyPassword 'templateKeyPass'
+        }
+        release {
+            storeFile file('sign/template.jks')
+            storePassword 'templateStorePass'
+            keyAlias 'template_alias'
+            keyPassword 'templateKeyPass'
+        }
+    }
     defaultConfig {
         applicationId "com.android.template"
         minSdkVersion min_sdk
         compileSdk target_sdk
         targetSdkVersion target_sdk
-        versionCode 13
+        versionCode 14
         versionName "3.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -202,8 +215,6 @@ dependencies {
     //sms retriever
     //  implementation 'com.google.android.gms:play-services-auth:19.0.0'
     //  implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.0'
-    //crop
-    implementation "com.isseiaoki:simplecropview:$simplecrop_view_version"
 
     //secure code
     implementation "com.chaos.view:pinview:$pin_view_version"
@@ -263,4 +274,10 @@ dependencies {
 
     // loading button
     implementation "com.github.leandroborgesferreira:loading-button-android:$loading_button_version"
+
+    //crop
+    implementation "com.vanniktech:android-image-cropper:$image_cropper_version"
+
+    // ImageViewer
+    implementation "com.github.stfalcon-studio:StfalconImageViewer:$stfalcon_image_viewer_version"
 }
