--- a/app/build.gradle
+++ b/app/build.gradle
@@ -159,7 +159,7 @@ dependencies {
     testImplementation "androidx.room:room-testing:$room_version"
 
     // debug database
-    debugImplementation "com.amitshekhar.android:debug-db:$debug_db_version"
+    debugImplementation "com.github.amitshekhariitbhu.Android-Debug-Database:debug-db:$debug_db_version"
 
     /**
      * VIEW MODEL AND LIVE DATE
@@ -167,10 +167,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
-    /**
-     * KeyStore
-     */
-    implementation "in.co.ophio:secure-preferences:$secure_preferences_version"
+    // Preferences DataStore
+    implementation "androidx.datastore:datastore-preferences:$datastore_version"
 
     /**
      * Pagination Library
@@ -191,8 +189,6 @@ dependencies {
 
 //    image picker
     implementation "com.github.nguyenhoanglam:ImagePicker:$image_picker_version"
-    //file picker
-    implementation "com.nononsenseapps:filepicker:$filepicker_version"
 
     //navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -210,14 +206,14 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
     implementation "androidx.legacy:legacy-support-v4:$androidx_support_version"
     //expandableLayout
-    implementation "net.cachapa.expandablelayout:expandablelayout:$expandable_layout_version"
+    implementation "com.github.cachapa:ExpandableLayout:$expandable_layout_version"
 
     //sms retriever
     //  implementation 'com.google.android.gms:play-services-auth:19.0.0'
     //  implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.0'
 
     //secure code
-    implementation "com.chaos.view:pinview:$pin_view_version"
+    implementation "io.github.chaosleung:pinview:$pin_view_version"
 
     // firebase
     implementation platform("com.google.firebase:firebase-bom:$firebase_bom_version")
