--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,10 @@ buildscript {
         rxjava_version = '3.1.6'
         rxandroid_version = '3.0.2'
         rxkotlin_version = '2.4.0'
-        secure_preferences_version = '0.1.3'
+        datastore_version = '1.1.1'
         picasso_version = '2.71828'
         swiperefresh_layout_version = '1.1.0'
         image_picker_version = '1.3.3'
-        filepicker_version = '4.1.0'
         fragment_ktx_version = '1.8.4'
         glide_version = '4.14.2'
         androidx_support_version = '1.0.0'
@@ -32,12 +31,12 @@ buildscript {
         gradleVersion = '8.4'
         dagger2_version = '2.48.1'
         room_version = '2.6.1'
-        debug_db_version = '1.0.6'
+        debug_db_version = '1.0.7'
         lifecycle = '2.1.0-alpha03'
         gson_version = '2.10.1'
         multidex_version = '2.0.1'
         lifecycle_version = '2.8.7'
-        pagination_version = '3.3.4'
+        pagination_version = '3.3.5'
         nav_version = '2.8.4'
         app_center_sdk_version = '4.4.5'
         signalR_version = '3.1.15'
@@ -53,16 +52,17 @@ buildscript {
         loading_button_version = '2.3.0'
         image_cropper_version = '4.6.0'
         stfalcon_image_viewer_version = 'v1.0.1'
+        tools_build_gradle_version = '8.7.3'
     }
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url 'https://maven.google.com' }
-        maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.7.1'
+        classpath "com.android.tools.build:gradle:$tools_build_gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "com.google.gms:google-services:$gsm_version"
@@ -75,11 +75,12 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven { url 'https://maven.google.com' }
         maven { url "https://jitpack.io" }
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+tasks.register('clean', Delete) {
+    delete rootProject.layout.buildDirectory
 }
