--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ buildscript {
         gradleVersion = '8.4'
         dagger2_version = '2.48.1'
         room_version = '2.6.1'
+        sqlcipher_version = '4.5.4'
         debug_db_version = '1.0.7'
         lifecycle = '2.1.0-alpha03'
         gson_version = '2.10.1'
