--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
         android:name=".TemplateApp"
         android:allowBackup="false"
@@ -35,8 +36,6 @@
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".ui.navigation.NavigationActivity"
-            android:launchMode="singleTask"
-
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="stateVisible|adjustResize" />
         <activity
@@ -55,6 +54,14 @@
                 android:resource="@xml/template_file_paths"
                 tools:replace="android:resource" />
         </provider>
+
+        <service
+            android:name="com.android.template.service.NotificationService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
