app bundle for firebase distribution

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ android {
             signingConfig signingConfigs.release
 
             firebaseAppDistribution {
+                artifactType = "AAB" // Specify that you're uploading an AAB
                 serviceCredentialsFile="D:\\Projects\\Template_files\\template-3fcc1-firebase-adminsdk-mgh3v-bf0690700e.json"
                 appId="1:1032016096431:android:d32cbd067813bffc27785a"
                 releaseNotes="New Dev Release Build!"
