--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         material_version = '1.12.0'
         constraint_layout_version = '2.2.0'
         junit_version = '4.13.2'
+        mockk_version = '1.12.4'
+        junit_jupiter_version = '5.12.0'
         junit_ext_version = '1.2.1'
         espresso_version = '3.6.1'
         core_ktx_version = '1.15.0'
