--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
+            testCoverageEnabled true // Enables coverage collection
 
             firebaseAppDistribution {
                 serviceCredentialsFile="D:\\Projects\\Template_files\\template-3fcc1-firebase-adminsdk-mgh3v-bf0690700e.json"
@@ -92,6 +93,7 @@ android {
             minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            testCoverageEnabled true // Enables coverage collection
         }
     }
 
@@ -141,15 +143,11 @@ jacoco {
     toolVersion = "0.8.10"
 }
 
-tasks.withType(Test).configureEach {
-    finalizedBy jacocoTestReport
-}
-
-tasks.register('jacocoTestReport', JacocoReport) {
-    dependsOn 'testDebugUnitTest' // Ensures unit tests run before generating the report
+tasks.register('generateCoverageReport', JacocoReport) {
+    dependsOn 'testDebugUnitTest' // Ensure tests run before coverage report generation
 
     reports {
-        xml.required = true
+        xml.required = true  // Coverage Plugin reads XML reports
         html.required = true
     }
 
@@ -157,6 +155,7 @@ tasks.register('jacocoTestReport', JacocoReport) {
     classDirectories.setFrom(files("$buildDir/intermediates/javac/debug"))
     executionData.setFrom(files("$buildDir/jacoco/testDebugUnitTest.exec"))
 }
+
 
 sonarqube {
     properties {
