--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ buildscript {
         junit_ext_version = '1.2.1'
         espresso_version = '3.6.1'
         core_ktx_version = '1.15.0'
+        test_core_version = '1.6.1'
+        jacoco_version = '0.8.11'
         recycler_view_version = '1.4.0'
         rxjava_version = '3.1.6'
         rxandroid_version = '3.0.2'
