--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         espresso_version = '3.6.1'
         core_ktx_version = '1.15.0'
         test_core_version = '1.6.1'
+        arch_core_testing_version = '2.2.0'
         jacoco_version = '0.8.11'
         recycler_view_version = '1.4.0'
         rxjava_version = '3.1.6'
