--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
         minSdkVersion min_sdk
         compileSdk target_sdk
         targetSdkVersion target_sdk
-        versionCode 22
+        versionCode 23
         versionName "3.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -85,7 +85,9 @@ android {
             firebaseAppDistribution {
                 serviceCredentialsFile="D:\\Projects\\Template_files\\template-3fcc1-firebase-adminsdk-mgh3v-bf0690700e.json"
                 appId="1:1032016096431:android:d6972a05d2b55c9127785a"
-                releaseNotes="New Dev Release Build!"
+                releaseNotes = project.hasProperty("releaseNotesFile") ?
+                        new File(project.property("releaseNotesFile")).text :
+                        "New Dev Release Build!"
                 testers="performanc24@gmail.com"
             }
         }
