--- a/build.gradle
+++ b/build.gradle
@@ -3,64 +3,59 @@
 buildscript {
     ext {
         min_sdk = 23
-        target_sdk = 35
-        kotlin_version = '1.9.24'
-        appcompat_version = '1.7.0'
-        material_version = '1.12.0'
-        constraint_layout_version = '2.2.0'
+        target_sdk = 36
+        kotlin_version = '2.1.10'
+        appcompat_version = '1.7.1'
+        material_version = '1.13.0'
+        constraint_layout_version = '2.2.1'
         junit_version = '4.13.2'
         mockk_version = '1.12.4'
         junit_jupiter_version = '5.12.0'
-        junit_ext_version = '1.2.1'
-        espresso_version = '3.6.1'
-        core_ktx_version = '1.15.0'
-        test_core_version = '1.6.1'
+        junit_ext_version = '1.3.0'
+        espresso_version = '3.7.0'
+        core_ktx_version = '1.17.0'
+        test_core_version = '1.7.0'
         arch_core_testing_version = '2.2.0'
-        jacoco_version = '0.8.11'
+        jacoco_version = '0.8.12'
         recycler_view_version = '1.4.0'
         rxjava_version = '3.1.6'
         rxandroid_version = '3.0.2'
-        rxkotlin_version = '2.4.0'
         datastore_version = '1.1.1'
         picasso_version = '2.71828'
         swiperefresh_layout_version = '1.1.0'
         image_picker_version = '1.3.3'
-        fragment_ktx_version = '1.8.5'
+        fragment_ktx_version = '1.8.9'
         glide_version = '4.14.2'
         androidx_support_version = '1.0.0'
-        expandable_layout_version = '2.9.2'
         pin_view_version = '1.4.4'
-        firebase_bom_version = '29.0.2'
+        firebase_bom_version = '33.6.0'
         month_year_picker = '1.0.2'
-        gradle_lupgin_kotlin_version = '1.6.21'
-        gradleVersion = '8.4'
-        dagger2_version = '2.48.1'
-        room_version = '2.6.1'
+        dagger2_version = '2.56.2'
+        room_version = '2.7.2'
         sqlcipher_version = '4.5.4'
         debug_db_version = '1.0.7'
-        lifecycle = '2.1.0-alpha03'
         gson_version = '2.10.1'
         multidex_version = '2.0.1'
-        lifecycle_version = '2.8.7'
-        pagination_version = '3.3.5'
-        nav_version = '2.8.5'
+        lifecycle_version = '2.9.3'
+        pagination_version = '3.3.6'
+        nav_version = '2.9.3'
         gsm_version = '4.4.1'
         compose_bom = '2025.01.01'
-        compose_lifecycle_viewmodel_version = '2.5.1'
-        compose_loading_image_version = '2.2.2'
-        compose_junit4= '1.7.4'
-        coroutine_version = '1.3.9'
-        security_crypto_version = '1.0.0'
+        compose_loading_image_version = '2.7.0'
+        coroutine_version = '1.9.0'
+        security_crypto_version = '1.1.0'
         retrofit_version = '2.9.0'
         okhttp_version = '4.10.0'
         loading_button_version = '2.3.0'
         image_cropper_version = '4.6.0'
         stfalcon_image_viewer_version = 'v1.0.1'
         shortcut_badger_version = '1.1.22@aar'
-        tools_build_gradle_version = '8.7.3'
+        gradle_plugin_version = '8.9.1'
         sonarqube_version = '3.3'
         firebase_crashlytics_gradle_version = '3.0.2'
         firebase_app_distribution_version = '4.1.0'
+        compiler_gradle_plugin_version = '2.1.0'
+        photo_view_version = '2.3.0'
     }
 
     repositories {
@@ -70,13 +65,14 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$tools_build_gradle_version"
+        classpath "com.android.tools.build:gradle:$gradle_plugin_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "com.google.gms:google-services:$gsm_version"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:$sonarqube_version" // added for sonarQube
         classpath "com.google.firebase:firebase-crashlytics-gradle:$firebase_crashlytics_gradle_version"
         classpath "com.google.firebase:firebase-appdistribution-gradle:$firebase_app_distribution_version"
+        classpath "org.jetbrains.kotlin:compose-compiler-gradle-plugin:$compiler_gradle_plugin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
